Add delete more than one item all api + get total all Order "Đã thanh toán"